# gazelle:prefix go.f110.dev/mono
# gazelle:proto disable_global
# gazelle:exclude containers/zoekt-webserver
# gazelle:exclude third_party/universal-ctags/ctags
# gazelle:resolve go go.f110.dev/mono/go/text/converter //go/text/converter
# gazelle:resolve go go.f110.dev/mono/go/git //go/git
# gazelle:resolve go go.f110.dev/mono/go/docutil //go/docutil
# gazelle:resolve go go.f110.dev/mono/go/bazel/devtools //go/bazel/devtools
# gazelle:resolve go go.f110.dev/mono/go/bazel/buildeventstream //go/bazel/buildeventstream

load("//build/rules:vendor.bzl", "go_vendor")

go_vendor(
    name = "vendor",
    patches = [
        "patch/fix-minio-operator-group-name.patch",
        "patch/fix-minio-operator-schemagroupversion.patch",
        "patch/cloudflare-circl-remove-assembly-codes.patch",
    ],
)

load("//build/rules/kind:cluster.bzl", "cluster")

cluster(
    name = "mono",
    manifest = "//manifests/devcluster",
    version = "v1.24.0",
    worker_num = 3,
)

alias(
    name = "monodev",
    actual = "//go/cmd/monodev",
)

load(":development_environments.bzl", "register_development_environments")

register_development_environments()
