# gazelle:prefix go.f110.dev/mono
# gazelle:proto disable_global
# gazelle:exclude containers/zoekt-webserver
# gazelle:exclude third_party/universal-ctags/ctags
# gazelle:resolve go go.f110.dev/mono/go/text/converter //go/text/converter
# gazelle:resolve go go.f110.dev/mono/go/git //go/git
# gazelle:resolve go go.f110.dev/mono/go/docutil //go/docutil
# gazelle:resolve go go.f110.dev/mono/go/bazel/devtools //go/bazel/devtools
# gazelle:resolve go go.f110.dev/mono/go/bazel/buildeventstream //go/bazel/buildeventstream

load("@gazelle//:def.bzl", "gazelle")
load("//build/rules/kind:cluster.bzl", "cluster")
load(":development_environments.bzl", "register_development_environments")

gazelle(name = "gazelle")

cluster(
    name = "k8scluster",
    manifest = "//manifests/devcluster",
    version = "v1.29.2",
    worker_num = 3,
)

alias(
    name = "monodev",
    actual = "//go/cmd/monodev",
)

register_development_environments()
