sh_binary(
    name = "vendor_bazel_remote",
    srcs = ["vendor-bazel-remote.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "vendor_pkgsite",
    srcs = ["vendor-pkgsite.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "vendor_dnscontrol",
    srcs = ["vendor-dnscontrol.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "vendor_stns",
    srcs = ["vendor-stns.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "vendor_universal_ctags",
    srcs = ["vendor-universal-ctags.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "backup_rules_go",
    srcs = ["backup-rules-go.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "backup_bazel_gazelle",
    srcs = ["backup-bazel-gazelle.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "backup_rules_python",
    srcs = ["backup-rules-python.sh"],
    deps = ["//script/lib"],
)
