sh_binary(
    name = "vendor_bazel_remote",
    srcs = ["vendor-bazel-remote.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "vendor_pkgsite",
    srcs = ["vendor-pkgsite.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "vendor_dnscontrol",
    srcs = ["vendor-dnscontrol.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "vendor_stns",
    srcs = ["vendor-stns.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "vendor_universal_ctags",
    srcs = ["vendor-universal-ctags.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "backup_rules_python",
    srcs = ["backup-rules-python.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "backup_rules_foreign_cc",
    srcs = ["backup-rules-foreign-cc.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "backup_protobuf",
    srcs = ["backup-protobuf.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "backup_dependent_archives",
    srcs = ["backup-dependent-archives.sh"],
    deps = ["//script/lib"],
)
