sh_binary(
    name = "vendor_pkgsite",
    srcs = ["vendor-pkgsite.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "vendor_dnscontrol",
    srcs = ["vendor-dnscontrol.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "vendor_universal_ctags",
    srcs = ["vendor-universal-ctags.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "vendor_reviewstack",
    srcs = ["vendor-reviewstack.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "backup_dependent_archives",
    srcs = ["backup-dependent-archives.sh"],
    deps = ["//script/lib"],
)

sh_binary(
    name = "vendor_minio",
    srcs = ["vendor-minio.sh"],
    deps = ["//script/lib"],
)
