load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "index",
    srcs = glob([
        "*.json",
        "*.html",
        "*.svg",
    ]),
    package_dir = "/reviewstack",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "reviewstack",
    visibility = ["//visibility:public"],
    deps = [
        ":index",
        "//third_party/reviewstack/generated",
        "//third_party/reviewstack/static",
    ],
)
