load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "mirror-releases_lib",
    srcs = [
        "main.go",
        "mirror.go",
    ],
    importpath = "go.f110.dev/mono/cmd/mirror-releases",
    visibility = ["//visibility:private"],
    deps = [
        "//go/cli",
        "//go/logger",
        "//go/storage",
        "@com_github_protonmail_go_crypto//openpgp:go_default_library",
        "@com_github_protonmail_go_crypto//openpgp/packet:go_default_library",
        "@dev_f110_go_xerrors//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "mirror-releases",
    embed = [":mirror-releases_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "mirror-releases_test",
    srcs = [
        "main_test.go",
        "mirror_test.go",
    ],
    embed = [":mirror-releases_lib"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
