load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rotarypress_lib",
    srcs = [
        "main.go",
        "rotarypress.go",
    ],
    importpath = "go.f110.dev/mono/cmd/rotarypress",
    visibility = ["//visibility:private"],
    deps = [
        "//go/cli",
        "//go/fsm",
        "//go/githubutil",
        "//go/logger",
        "//go/storage",
        "@com_github_blang_semver_v4//:go_default_library",
        "@com_github_google_go_github_v49//github:go_default_library",
        "@dev_f110_go_xerrors//:go_default_library",
        "@net_starlark_go//syntax:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "rotarypress",
    embed = [":rotarypress_lib"],
    visibility = ["//visibility:public"],
)
