load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rotarypress_lib",
    srcs = [
        "main.go",
        "rotarypress.go",
    ],
    importpath = "go.f110.dev/mono/cmd/rotarypress",
    visibility = ["//visibility:private"],
    deps = [
        "//go/cli",
        "//go/fsm",
        "//go/githubutil",
        "//go/logger",
        "//go/storage",
        "@com_github_blang_semver_v4//:semver",
        "@com_github_google_go_github_v73//github",
        "@dev_f110_go_xerrors//:xerrors",
        "@net_starlark_go//syntax",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "rotarypress",
    embed = [":rotarypress_lib"],
    visibility = ["//visibility:public"],
)
