load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "simple-http-server_lib",
    srcs = [
        "config.go",
        "main.go",
        "server.go",
    ],
    importpath = "go.f110.dev/mono/cmd/simple-http-server",
    visibility = ["//visibility:private"],
    deps = [
        "//go/cli",
        "//go/fsm",
        "//go/http/httpserver",
        "//go/logger",
        "//go/ucl",
        "//vendor/github.com/nissy/bon",
        "//vendor/go.uber.org/zap",
    ],
)

go_binary(
    name = "simple-http-server",
    embed = [":simple-http-server_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "simple-http-server_test",
    srcs = ["server_test.go"],
    embed = [":simple-http-server_lib"],
    deps = [
        "//go/logger",
        "//go/netutil",
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/github.com/stretchr/testify/require",
    ],
)
