load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")

pkg_tar(
    name = "plugins",
    files = {
        "@argocd_vault_plugin//file": "/usr/local/bin/argocd-vault-plugin",
    },
    mode = "0755",
)

oci_image(
    name = "image",
    architecture = "amd64",
    os = "linux",
    tars = [":plugins"],
    visibility = ["//visibility:public"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "registry.f110.dev/tools/argocd-plugins",
    repotags = ["latest"],
)
