load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")

pkg_tar(
    name = "bin",
    srcs = [
        "//third_party/bazel-remote",
    ],
    mode = "0755",
    package_dir = "/usr/local/bin",
)

oci_image(
    name = "image",
    base = "@oci_com_google_distroless_base",
    cmd = ["--max_size=5"],
    entrypoint = ["/usr/local/bin/bazel-remote"],
    tars = [
        ":bin",
    ],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "registry.f110.dev/bazel-remote/bazel-remote-cache",
    repotags = ["latest"],
)
