load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")

pkg_tar(
    name = "bin",
    files = {
        "@bazel_remote//file": "/usr/local/bin/bazel-remote",
    },
    mode = "0755",
)

oci_image(
    name = "image",
    base = "@com_google_distroless_base",
    cmd = ["--max_size=5"],
    entrypoint = ["/usr/local/bin/bazel-remote"],
    tars = [
        ":bin",
    ],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "registry.f110.dev/bazel-remote/bazel-remote-cache",
    remote_tags = ["latest"],
)
