load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "bin",
    files = {
        "@bazel_remote//file": "/usr/local/bin/bazel-remote",
    },
    mode = "0755",
)

oci_image(
    name = "image",
    base = "@com_google_distroless_base_debian12_linux_amd64",
    cmd = ["--max_size=5"],
    entrypoint = ["/usr/local/bin/bazel-remote"],
    tars = [
        ":bin",
    ],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "repo.center.x.f110.dev/bazel-remote/bazel-remote-cache",
)
