load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

pkg_tar(
    name = "bin",
    srcs = [
        "//third_party/dnscontrol",
        "//third_party/dnscontrol/cmd/convertzone",
        "//tools/dns-config-generator",
    ],
    mode = "0755",
    package_dir = "/usr/local/bin",
)

container_image(
    name = "image",
    base = "@com_google_distroless_base//image",
    cmd = ["/usr/local/bin/dnscontrol"],
    tars = [":bin"],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "registry.f110.dev",
    repository = "dnscontrol/dnscontrol",
    tag = "latest",
)
