load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//build/rules/container:def.bzl", "container_image")
load("@rules_oci//oci:defs.bzl", "oci_push")

pkg_tar(
    name = "bin",
    srcs = [
        "//go/cmd/dns-config-generator",
        "//third_party/dnscontrol",
        "//third_party/dnscontrol/cmd/convertzone",
    ],
    mode = "0755",
    package_dir = "/usr/local/bin",
)

container_image(
    name = "image",
    base = "@oci_com_google_distroless_base",
    cmd = ["/usr/local/bin/dnscontrol"],
    tars = [":bin"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "registry.f110.dev/dnscontrol/dnscontrol",
    repotags = ["latest"],
)
