load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

pkg_tar(
    name = "bin",
    srcs = [
        "//go/cmd/etcdbackup",
    ],
    mode = "0755",
    package_dir = "/usr/local/bin",
)

container_image(
    name = "image",
    base = select({
        "@io_bazel_rules_go//go/platform:linux_amd64": "@com_google_distroless_base//image",
        "@io_bazel_rules_go//go/platform:linux_arm64": "@com_google_distroless_base_arm64//image",
        "//conditions:default": "@com_google_distroless_base//image",
    }),
    entrypoint = ["/usr/local/bin/etcdbackup"],
    tars = [":bin"],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "quay.io",
    repository = "f110/etcdbackup",
    tag = "latest",
)
