load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//build/rules/container:def.bzl", "container_image")
load("@rules_oci//oci:defs.bzl", "oci_push")

pkg_tar(
    name = "bin",
    srcs = [
        "//go/cmd/etcdbackup",
    ],
    mode = "0755",
    package_dir = "/usr/local/bin",
)

container_image(
    name = "image",
    base = select({
        "@io_bazel_rules_go//go/platform:linux_amd64": "@oci_com_google_distroless_base",
        "@io_bazel_rules_go//go/platform:linux_arm64": "@oci_com_google_distroless_base_arm64",
        "//conditions:default": "@oci_com_google_distroless_base",
    }),
    entrypoint = ["/usr/local/bin/etcdbackup"],
    tars = [":bin"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "quay.io/f110/etcdbackup",
    repotags = ["latest"],
)
